# 20250605-durabletask-aca-jobs

./: README.md
dts-worker/: .dockerignore  durabletask_containerapps.py  pyproject.toml
src/dts-worker/: Dockerfile  durabletask_containerapps.py  utils.py  worker.py
src/transcribe-video-job/: .dockerignore  main.py  pyproject.toml
transcribe-video-job/: Dockerfile
